--- a/ibmCurrencyConverter/src/main/resources/application.properties
+++ b/ibmCurrencyConverter/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=NO
+spring.datasource.username=root
+spring.datasource.password=slaptaszodis
+logging.level.root=WARN
+debug=true
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-server.servlet.contextPath=/currencies
+
